<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:clickable="true"

        android:id="@+id/scrollView">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:paddingBottom="@dimen/dp_20"
                                                 android:id="@+id/main_view_branch">

        <!--android:focusable="true"-->
        <!--android:focusableInTouchMode="true"-->

        <TextView
                android:id="@+id/text_lan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_40"
                android:text="@string/lan"
                android:textAllCaps="false"
                android:textColor="@color/txt_edit_color"
                android:textSize="@dimen/sp_18"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:id="@+id/lan_num_frame"
                app:layout_constraintTop_toBottomOf="@+id/text_lan"
                android:layout_centerVertical="true" >

        <EditText
                android:id="@+id/edit_lan_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_40"
                android:maxLines="1"
                android:singleLine="true"
                android:clickable="true"
                android:inputType="textCapCharacters|textNoSuggestions"
                android:focusableInTouchMode="true"
                android:scrollHorizontally="true"
                android:layout_marginBottom="@dimen/dp_10"
                android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:layout_marginRight="@dimen/dp_40"
                android:maxLength="14"
                android:background="@drawable/btn_custom_edit"
                android:paddingLeft="@dimen/dp_5"
                android:hint="@string/hint_lane"
                android:textAllCaps="false"
                android:textColor="@color/txt_edit_color"
                android:textSize="@dimen/sp_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_lan"/>

            <Button
                    android:id="@+id/button_cross_frame"
                    android:layout_width="35dp"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="right"
                    android:visibility="gone"

                    android:layout_marginRight="@dimen/dp_45"
                    android:drawableRight="@mipmap/cross"
                    android:text=" "
                    android:background="?android:attr/selectableItemBackground"
            />
        </FrameLayout>

        // android:inputType="textCapCharacters"

        <TextView
                android:id="@+id/text_customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_40"
                android:text="@string/customer_name"
                android:textAllCaps="false"
                android:textColor="@color/txt_edit_color"
                android:textSize="@dimen/sp_18"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lan_num_frame"/>
        <EditText
                android:id="@+id/edit_customer_name"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:cursorVisible="false"
                android:padding="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_40"
                android:singleLine="true"
                android:editable="false"
                android:focusable="false"
                android:clickable="false"
                android:background="@drawable/btn_custom_edit"
                android:paddingLeft="@dimen/dp_5"
                android:maxLines="1"
                android:inputType="text|textNoSuggestions"
                android:scrollHorizontally="true"
                android:hint="@string/hint_customerName"
                android:textAllCaps="false"
                android:textColor="@color/txt_edit_color"
                android:textSize="@dimen/sp_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_customer_name"/>


        <TextView
                android:id="@+id/text_payment_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_40"
                android:text="@string/payment_type"
                android:textAllCaps="false"
                android:textColor="@color/txt_edit_color"
                android:textSize="@dimen/sp_18"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_customer_name"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"

                app:layout_constraintTop_toBottomOf="@+id/text_payment_type"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_40"
                android:id="@+id/linear_radio"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_4">
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:id="@+id/radio_group_payment"
                    app:layout_constraintTop_toBottomOf="@+id/text_agent_code"
                    android:orientation="horizontal">


                <RadioButton
                        android:id="@+id/full"
                        android:layout_width="wrap_content"
                        android:text="@string/full"
                        android:checked="true"
                        android:layout_height="wrap_content"/>
                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_toRightOf="@+id/full"-->
                <!--android:layout_marginTop="@dimen/dp_4"-->
                <!--android:text="@string/full"/>-->


                <RadioButton
                        android:layout_marginLeft="@dimen/dp_80"
                        android:id="@+id/partial"
                        android:layout_width="wrap_content"
                        android:text="@string/partial"
                        android:layout_height="wrap_content"/>
                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_toRightOf="@+id/partial"-->
                <!--android:layout_marginTop="@dimen/dp_4"-->
                <!--android:text="@string/partial"/>-->

            </RadioGroup>
        </LinearLayout>

        <TextView
                android:id="@+id/text_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_40"
                android:text="@string/transaction_amount"
                android:textAllCaps="false"
                android:textColor="@color/txt_edit_color"
                android:textSize="@dimen/sp_18"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_radio"/>

        <EditText
                android:id="@+id/edit_transaction_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_40"
                android:background="@drawable/btn_custom_edit"
                android:paddingLeft="@dimen/dp_5"
                android:maxLines="1"
                android:singleLine="true"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:scrollHorizontally="true"
                android:hint="@string/hint_amount"
                android:textAllCaps="false"
                android:textColor="@color/txt_edit_color"
                android:textSize="@dimen/sp_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_amount"
        />
        <Button
                android:id="@+id/pay_debit_card_branch"
                android:background="@drawable/btn_shape_capsule"
                android:layout_marginTop="@dimen/dp_50"
                android:text="@string/debit_card_btn"
                android:textAllCaps="false"
                android:textColor="@color/background"
                android:textSize="@dimen/sp_16"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_40"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginBottom="@dimen/dp_15"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_transaction_branch"
        />

    </android.support.constraint.ConstraintLayout>

</ScrollView>