<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:clickable="true"

        android:id="@+id/scrollView">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:paddingBottom="@dimen/dp_20"

                                                 android:cursorVisible="false"
                                                 android:id="@+id/main_view_agency">
        <!--android:focusable="true"-->
        <!--android:focusableInTouchMode="true"-->
        <!--android:focusedByDefault="true"-->

            <TextView
                    android:id="@+id/text_agency_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_40"
                    android:text="@string/agency_name"
                    android:textAllCaps="false"
                    android:textColor="@color/txt_edit_color"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>


            <EditText
                    android:id="@+id/edit_agency_name"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="@dimen/dp_40"
                    android:maxLines="1"
                    android:padding="@dimen/dp_10"
                    android:background="@drawable/btn_custom_edit"
                    android:inputType="textCapWords|textNoSuggestions|textPersonName"
                    android:editable="false"
                    android:focusable="false"
                    android:clickable="false"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_40"
                    android:hint="@string/agency_name"
                    android:textColor="@color/txt_edit_color"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_agency_name"/>
        <TextView
                android:id="@+id/text_agent_name"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_40"
                android:text="@string/agent_name"
                android:textAllCaps="false"
                android:textColor="@color/txt_edit_color"
                android:textSize="@dimen/sp_18"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_agency_name"/>
            <EditText
                    android:id="@+id/edit_agent_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:singleLine="true"
                    android:layout_marginLeft="@dimen/dp_40"
                    android:layout_marginRight="@dimen/dp_40"
                    android:paddingLeft="@dimen/dp_5"
                    android:editable="false"
                    android:focusable="false"
                    android:clickable="false"
                    android:inputType="textCapWords|textNoSuggestions|textPersonName"
                    android:maxLines="1"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@drawable/btn_custom_edit"
                    android:scrollHorizontally="true"
                    android:hint="@string/hint_agent"
                    android:textColor="@color/txt_edit_color"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_agent_name"/>

      //

            <TextView
                    android:id="@+id/text_agent_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_30"
                    android:layout_marginRight="@dimen/dp_40"
                    android:text="@string/agent_code"
                    android:textAllCaps="false"
                    android:textColor="@color/txt_edit_color"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_agent_name"/>
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:id="@+id/agent_code_frame"
                app:layout_constraintTop_toBottomOf="@+id/text_agent_code"
                android:layout_centerVertical="true" >
            <EditText
                    android:id="@+id/edit_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_40"
                    android:layout_marginRight="@dimen/dp_40"
                    android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:paddingLeft="@dimen/dp_5"
                    android:singleLine="true"
                    android:inputType="textCapCharacters|textNoSuggestions"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@drawable/btn_custom_edit"
                    android:scrollHorizontally="true"
                    android:hint="@string/hint_agent_code"
                    android:textAllCaps="false"
                    android:textColor="@color/txt_edit_color"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_agent_code"/>



            <Button
                    android:id="@+id/cross_agent_code_frame"
                    android:layout_width="35dp"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="right"
                    android:visibility="gone"

                    android:layout_marginRight="@dimen/dp_45"
                    android:drawableRight="@mipmap/cross"
                    android:text=" "
                    android:background="?android:attr/selectableItemBackground"
            />
        </FrameLayout>

            <TextView
                    android:id="@+id/text_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_30"
                    android:layout_marginRight="@dimen/dp_40"
                    android:text="@string/amount"
                    android:textAllCaps="false"
                    android:textColor="@color/txt_edit_color"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/agent_code_frame"/>
            <EditText
                    android:id="@+id/edit_amount_agency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_40"
                    android:layout_marginRight="@dimen/dp_40"
                    android:paddingLeft="@dimen/dp_5"
                    android:hint="@string/hint_amount"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    android:maxLength="10"

                    android:maxLines="1"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@drawable/btn_custom_edit"
                    android:digits="0123456789"
                    android:scrollHorizontally="true"
                    android:textAllCaps="false"
                    android:textColor="@color/txt_edit_color"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_amount"/>



        <Button
                android:id="@+id/pay_debit_card_agency"
                android:background="@drawable/btn_shape_capsule"
                android:layout_marginTop="@dimen/dp_50"
                android:text="@string/debit_card_btn"
                android:textAllCaps="false"
                android:textColor="@color/background"
                android:textSize="@dimen/sp_16"

                android:layout_marginBottom="@dimen/dp_15"

                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_40"


                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_amount_agency"
        />

        <!--<Button-->
                    <!--android:id="@+id/pay_debit_card_agency"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="55dp"-->
                    <!--app:layout_constraintBottom_toBottomOf="parent"-->
                    <!--android:background="@drawable/btn_shape_capsule"-->
                    <!--android:gravity="center"-->
                    <!--android:text="@string/debit_card_btn"-->
                    <!--android:textAllCaps="false"-->
                    <!--android:textColor="@color/background"-->
                    <!--android:textSize="@dimen/sp_18"-->
                    <!--app:layout_constraintLeft_toLeftOf="parent"-->
                    <!--app:layout_constraintRight_toRightOf="parent"/>-->

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <!--<ProgressBar-->
    <!--android:id="@+id/signupProgress"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:indeterminate="true"-->
    <!--android:indeterminateTintMode="src_atop"-->
    <!--android:indeterminateTint="@color/colorAccent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:visibility="visible" />-->

